# z3-playground

./: .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json5
.github/workflows/: ci.yaml
exercises/: fish_puzzle.py  hogwarts.py  tsuru_kame.py
solutions/: fish_puzzle.py  hogwarts.py  tsuru_kame.py  two_numbers.py
